# codexer

./: .gitignore  AGENTS.md  pyproject.toml
.antigravitycli/: 828d916a-dc1c-4fdf-8d8c-6edc5ed8fc3e.json
src/codexer/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
